# combinatorio

./: Cargo.toml  LICENSE  README.md  dsl.txt  symbols.json  test.c8  test.c8r
assets/std/: prelude.cdl
projects/: test.cdl  test.cio
projects/chip8/: chip8.cdl  chip8.txt  dude.ch8  gpu.cdl
src/: assets.rs  blueprint.rs  common.rs  disjoint_set.rs  ir.rs  lexer.rs  main.rs  parser.rs  rom_generator.rs  symbols.rs
src/ir/: layout.rs  mod.rs  placement.rs  prune.rs  select_colors.rs  select_symbols.rs  to_blueprint.rs
src/ir/opt/: constant_folding.rs  fix_nodes.rs  mod.rs  tree_prune.rs  tree_pruning.rs
