[package]
name = "combinatorio"
version = "0.1.0"
authors = ["cogg <adam@cogg.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
flate2 = "1.0.20"
serde_json = "1.0.64"
serde = {version = "1.0", features = ["derive"]}
