[package]
name = "combinatorio"
version = "1.0.0"
authors = ["cogg <adam@cogg.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
flate2 = "1.0.20"
once_cell = "1.8.0"
rand = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
